
- Moved the "tm->tm_wday" initialization out of the hook function
  in "time_strftime.c" since it was to be called only once anyway.

- Lost a few compiler warnings in "unistd_time_delay.c" and
  "time_gettimeofday.c".

- Folded duplicate code in "time_mktime.c"; also, errno is no longer
  modified unless the library is built with the "CHECK_FOR_NULL_POINTERS"
  option.


c.lib 1.187 (29.1.2005)

- The default console output window opened when a program is launched
  from Workbench would open and stay open. This was not intended to
  happen and is a side-effect of the new stdio initialization code which
  checks if the stdio streams are in non-blocking mode. Fixed.

- Moved the common DateStamp to time_t conversion code into a shared
  function.

- The fall-back function for converting time into a string in strftime()
  now calls itself for the "%c", "%x" and "%X" format specifiers.

- mktime() is supposed to convert the time specification, given as local
  time, into the number of seconds since January 1st, 1970, relative to
  UTC. This didn't really work up until now since the time value returned
  was given as local time.

- Plugged in a different algorithm for calculating the day of the week in
  strftime() and asctime_r(). This one isn't sensitive to the effects of
  adding/subtracting the local time zone.

- Changed the algorithm that calculates the number of days that have passed
  so far as used by the the __convert_time() function and the conversion
  code in strftime().

- Also changed the algorithm used by strftime() to produce the week numbers
  (the '%U' and '%W' format specifiers). The new method is much simpler
  than the old one.

- Made the code that converts a 'time_t' value into the 'struct DateStamp',
  as used by strftime() and utime(), into its own function. This also
  fixes a bug in the code strftime() would use which was completely
  unaware of the local time zone settings.


c.lib 1.186 (14.1.2005)
